@@ -19,17 +19,12 @@ TAO_BEGIN_VERSIONED_NAMESPACE_DECL
 
 TAO_FT_Service_Callbacks::TAO_FT_Service_Callbacks (TAO_ORB_Core *orb_core)
 
-  : orb_core_ (orb_core),
-    profile_lock_ (0)
+  : orb_core_ (orb_core)
 {
-  this->profile_lock_ =
-    this->orb_core_->client_factory ()->create_profile_lock ();
 }
 
 TAO_FT_Service_Callbacks::~TAO_FT_Service_Callbacks (void)
 {
-  // Delete the memeory for the lock
-  delete this->profile_lock_;
 }
 
 CORBA::Boolean
@@ -203,7 +198,7 @@ TAO_FT_Service_Callbacks::is_permanent_forward_condition (const CORBA::Object_pt
   sc.context_id = IOP::FT_GROUP_VERSION;
 
   if (service_context.get_context (sc) == 0)
-      return false; /* false */
+      return false;
 
   IOP::TaggedComponent tc;
   tc.tag = IOP::TAG_FT_GROUP;
@@ -213,9 +208,9 @@ TAO_FT_Service_Callbacks::is_permanent_forward_condition (const CORBA::Object_pt
   if (stub->forward_profiles ())
     {
       // set lock, as forward_profiles might be deleted concurrently
-      ACE_MT (ACE_GUARD_RETURN (ACE_Lock,
+      ACE_MT (ACE_GUARD_RETURN (TAO_SYNCH_MUTEX,
                                 guard,
-                                *stub->profile_lock (),
+                                stub->profile_lock (),
                                 0));
 
       // even now, the forward profiles might have been deleted in the meanwhile
@@ -234,9 +229,9 @@ TAO_FT_Service_Callbacks::is_permanent_forward_condition (const CORBA::Object_pt
 
       if (tagged_components.get_component (tc) == 0)
         // releasing lock
-        return false; /* false */
+        return false;
 
-      return true; /* true */
+      return true;
 
       // releasing lock
     }
