@@ -116,10 +116,6 @@ public:
   void _incr_refcnt (void);
   void _decr_refcnt (void);
 
-  /// Return the Profile lock. This lock can be used at places where
-  /// profiles need to be edited.
-  ACE_Lock *profile_lock (void) const;
-
   /// Manage the base (non-forwarded) profiles.
   /// Returns a pointer to the profile_in_use object.  This object
   /// retains ownership of this profile.
@@ -265,6 +261,8 @@ public:
   void forwarded_on_exception (bool forwarded);
   bool forwarded_on_exception () const;
 
+  TAO_SYNCH_MUTEX& profile_lock () const;
+
 protected:
 
   /// Destructor is to be called only through _decr_refcnt() to
@@ -369,7 +367,7 @@ protected:
   TAO_Profile *profile_in_use_;
 
   /// Mutex to protect access to the forwarding profile.
-  ACE_Lock* profile_lock_ptr_;
+  mutable TAO_SYNCH_MUTEX profile_lock_;
 
   /// Have we successfully talked to the forward profile yet?
   CORBA::Boolean profile_success_;
@@ -403,9 +401,8 @@ protected:
    */
   CORBA::Boolean const collocation_opt_;
 
-
-  // True if forwarding request upon some specific exceptions
-  // (e.g. OBJECT_NOT_EXIST) already happened.
+  /// True if forwarding request upon some specific exceptions
+  /// (e.g. OBJECT_NOT_EXIST) already happened.
   ACE_Atomic_Op<TAO_SYNCH_MUTEX, bool> forwarded_on_exception_;
 };
 
